# server/routes/api/v1/staff/index.js
@@ -34,5 +34,6 @@ router.use('/cases', require('./cases'));
 router.use('/cases/:caseId', require('./case-mutations'));
 router.use('/clients', require('./clients'));
 router.use('/tasks', require('./tasks'));
+router.use('/deadlines', require('./deadlines'));
 
 module.exports = router;
